@@ -16,7 +16,7 @@ $result_trees{'set_form_feed'} = {
         },
         {
           'parent' => {},
-          'text' => ' a\\a\\f\\\\',
+          'text' => 'a\\a\\f\\\\',
           'type' => 'misc_arg'
         }
       ],
@@ -26,16 +26,32 @@ $result_trees{'set_form_feed'} = {
 ',
         'misc_args' => [
           'gg',
-          ' a\\a\\f\\\\'
+          'a\\a\\f\\\\'
         ]
       },
       'parent' => {}
     },
     {
+      'args' => [
+        {
+          'parent' => {},
+          'text' => 'hh',
+          'type' => 'misc_arg'
+        },
+        {
+          'parent' => {},
+          'text' => '',
+          'type' => 'misc_arg'
+        }
+      ],
       'cmdname' => 'set',
       'extra' => {
         'arg_line' => ' hh
-'
+',
+        'misc_args' => [
+          'hh',
+          ''
+        ]
       },
       'parent' => {}
     },
@@ -48,7 +64,7 @@ $result_trees{'set_form_feed'} = {
         },
         {
           'parent' => {},
-          'text' => '',
+          'text' => '',
           'type' => 'misc_arg'
         }
       ],
@@ -58,7 +74,7 @@ $result_trees{'set_form_feed'} = {
 ',
         'misc_args' => [
           'll',
-          ''
+          ''
         ]
       },
       'parent' => {}
@@ -77,17 +93,7 @@ $result_trees{'set_form_feed'} = {
               'contents' => [
                 {
                   'parent' => {},
-                  'text' => ' a\\a\\f\\\\. '
-                },
-                {
-                  'cmdname' => 'value',
-                  'contents' => [],
-                  'parent' => {},
-                  'type' => 'hh'
-                },
-                {
-                  'parent' => {},
-                  'text' => '. '
+                  'text' => 'a\\a\\f\\\\. . '
                 }
               ],
               'parent' => {},
@@ -118,14 +124,14 @@ $result_trees{'set_form_feed'} = {
 $result_trees{'set_form_feed'}{'contents'}[0]{'args'}[0]{'parent'} = $result_trees{'set_form_feed'}{'contents'}[0];
 $result_trees{'set_form_feed'}{'contents'}[0]{'args'}[1]{'parent'} = $result_trees{'set_form_feed'}{'contents'}[0];
 $result_trees{'set_form_feed'}{'contents'}[0]{'parent'} = $result_trees{'set_form_feed'};
+$result_trees{'set_form_feed'}{'contents'}[1]{'args'}[0]{'parent'} = $result_trees{'set_form_feed'}{'contents'}[1];
+$result_trees{'set_form_feed'}{'contents'}[1]{'args'}[1]{'parent'} = $result_trees{'set_form_feed'}{'contents'}[1];
 $result_trees{'set_form_feed'}{'contents'}[1]{'parent'} = $result_trees{'set_form_feed'};
 $result_trees{'set_form_feed'}{'contents'}[2]{'args'}[0]{'parent'} = $result_trees{'set_form_feed'}{'contents'}[2];
 $result_trees{'set_form_feed'}{'contents'}[2]{'args'}[1]{'parent'} = $result_trees{'set_form_feed'}{'contents'}[2];
 $result_trees{'set_form_feed'}{'contents'}[2]{'parent'} = $result_trees{'set_form_feed'};
 $result_trees{'set_form_feed'}{'contents'}[3]{'parent'} = $result_trees{'set_form_feed'};
 $result_trees{'set_form_feed'}{'contents'}[4]{'contents'}[0]{'args'}[0]{'contents'}[0]{'parent'} = $result_trees{'set_form_feed'}{'contents'}[4]{'contents'}[0]{'args'}[0];
-$result_trees{'set_form_feed'}{'contents'}[4]{'contents'}[0]{'args'}[0]{'contents'}[1]{'parent'} = $result_trees{'set_form_feed'}{'contents'}[4]{'contents'}[0]{'args'}[0];
-$result_trees{'set_form_feed'}{'contents'}[4]{'contents'}[0]{'args'}[0]{'contents'}[2]{'parent'} = $result_trees{'set_form_feed'}{'contents'}[4]{'contents'}[0]{'args'}[0];
 $result_trees{'set_form_feed'}{'contents'}[4]{'contents'}[0]{'args'}[0]{'parent'} = $result_trees{'set_form_feed'}{'contents'}[4]{'contents'}[0];
 $result_trees{'set_form_feed'}{'contents'}[4]{'contents'}[0]{'parent'} = $result_trees{'set_form_feed'}{'contents'}[4];
 $result_trees{'set_form_feed'}{'contents'}[4]{'contents'}[1]{'parent'} = $result_trees{'set_form_feed'}{'contents'}[4];
@@ -135,42 +141,23 @@ $result_texis{'set_form_feed'} = '@set gg  a\\a\\f\\\\
 @set hh
 @set ll 
 
-@code{ a\\a\\f\\\\. @value{hh}. }.
+@code{a\\a\\f\\\\. . }.
 ';
 
 
 $result_texts{'set_form_feed'} = '
- a\\a\\f\\\\. . .
+a\\a\\f\\\\. . .
 ';
 
-$result_errors{'set_form_feed'} = [
-  {
-    'error_line' => ':2: bad name for @set
-',
-    'file_name' => '',
-    'line_nr' => 2,
-    'macro' => '',
-    'text' => 'bad name for @set',
-    'type' => 'error'
-  },
-  {
-    'error_line' => ':5: warning: undefined flag: hh
-',
-    'file_name' => '',
-    'line_nr' => 5,
-    'macro' => '',
-    'text' => 'undefined flag: hh',
-    'type' => 'warning'
-  }
-];
+$result_errors{'set_form_feed'} = [];
 
 
 
-$result_converted{'xml'}->{'set_form_feed'} = '<set name="gg" line=" gg &attrformfeed; a\\\\a\\\\f\\\\\\\\">&formfeed; a\\a\\f\\\\</set>
-<set line=" hh&attrformfeed;"></set>
-<set name="ll" line=" ll &attrformfeed;">&formfeed;</set>
+$result_converted{'xml'}->{'set_form_feed'} = '<set name="gg" line=" gg &attrformfeed; a\\\\a\\\\f\\\\\\\\">a\\a\\f\\\\</set>
+<set name="hh" line=" hh&attrformfeed;"></set>
+<set name="ll" line=" ll &attrformfeed;"></set>
 
-<para><code>&formfeed; a\\a\\f\\\\. . &formfeed;</code>.
+<para><code>a\\a\\f\\\\. . </code>.
 </para>';
 
 1;
